--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "bootstrap": "^4.5.2",
+    "classnames": "^2.2.6",
     "cra-template": "1.0.3",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
