--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -7,9 +7,11 @@
     "@fortawesome/free-brands-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
     "cra-template": "1.0.3",
+    "moment": "^2.28.0",
     "msal": "^1.4.0",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
