--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -24,7 +24,8 @@
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "shards-react": "^1.0.3"
+    "shards-react": "^1.0.3",
+    "toastr": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
