--- a/web-ui/public/manifest.json
+++ b/web-ui/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Apto 73",
+  "name": "Apto 73 website",
   "icons": [
     {
       "src": "favicon.ico",
