--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-aad-msal": "^2.3.5",
+    "react-datepicker": "^3.2.2",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.8.2",
     "react-redux": "^7.2.1",
