--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.4",
     "classnames": "^2.2.6",
     "cra-template": "1.0.3",
     "moment": "^2.28.0",
