start refactoring front end

--- a/web-ui/.env.example
+++ b/web-ui/.env.example
@@ -2,3 +2,4 @@ REACT_APP_AZURE_TENANT=value
 REACT_APP_AZURE_CLIENT=value
 REACT_APP_CURRENT_URI=http://localhost:3000
 REACT_APP_API_URL=http://localhost:3001/api
+REACT_APP_AUTH_SCOPE=value
