fixed lint on back-end

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,8 +1,8 @@
-DATABASE_NAME=
-USERNAME=
-PASSWORD=
+DB_NAME=
+DB_USERNAME=
+DB_PASSWORD=
 CONTAINER=
-PORT=9980
+PORT=
 AZURE_TENANT=
 AZURE_CLIENT_ID=
 NODE_ENV=
