--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "pm2 start loader.js --no-daemon",
-    "lint": "./node_modules/.bin/eslint ./"
+    "lint": "./node_modules/.bin/eslint ./",
+    "lint:fix": "./node_modules/.bin/eslint ./ --fix"
   },
   "author": "",
   "license": "ISC",
@@ -20,7 +21,9 @@
     "passport-azure-ad": "^4.2.1"
   },
   "devDependencies": {
-    "eslint": "^7.0.0",
+    "eslint": "^7.20.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0"
   }
 }
